--- a/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
+++ b/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
@@ -41,16 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntidadBase.cs" />
     <Compile Include="Equipo.cs" />
     <Compile Include="EquipoClimatizacion.cs" />
+    <Compile Include="EquipoCirugia.cs" />
     <Compile Include="EquipoRespirador.cs" />
     <Compile Include="EstadoDeEquipo.cs" />
     <Compile Include="GarantiaContrato.cs" />
     <Compile Include="InformacionComercial.cs" />
+    <Compile Include="MantenimientoEquipo.cs" />
+    <Compile Include="MantenimientoEstado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
-    <Compile Include="TipoDeEquipo.cs" />
     <Compile Include="Ubicacion.cs" />
     <Compile Include="UsuarioTecnico.cs" />
   </ItemGroup>
