Ordenes de Trabajo v1

--- a/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
+++ b/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
@@ -50,6 +50,7 @@
     <Compile Include="InformacionComercial.cs" />
     <Compile Include="MantenimientoEquipo.cs" />
     <Compile Include="MantenimientoEstado.cs" />
+    <Compile Include="OrdenDeTrabajo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
     <Compile Include="SolicitudUsuario.cs" />
