--- a/EquiposTecnicosSN.Web/EquiposTecnicosSN.Web.csproj
+++ b/EquiposTecnicosSN.Web/EquiposTecnicosSN.Web.csproj
@@ -223,44 +223,19 @@
     <Compile Include="Controllers\InformacionesComercialesController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MantenimientosEquipoController.cs" />
-    <Compile Include="Controllers\OrdenesDeTrabajoController.cs" />
     <Compile Include="Controllers\ProveedoresController.cs" />
     <Compile Include="Controllers\SolicitudesUsuariosController.cs" />
     <Compile Include="Controllers\UbicacionesController.cs" />
     <Compile Include="DataContexts\EquiposDb.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604091600278_Inicial.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604091600278_Inicial.Designer.cs">
-      <DependentUpon>201604091600278_Inicial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201604102228312_Update.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604102228312_Update.Designer.cs">
-      <DependentUpon>201604102228312_Update.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201604102233565_Update2.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604102233565_Update2.Designer.cs">
-      <DependentUpon>201604102233565_Update2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201604130144279_AddOrdenDeTrabajo.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604130144279_AddOrdenDeTrabajo.Designer.cs">
-      <DependentUpon>201604130144279_AddOrdenDeTrabajo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201604130152334_Prueba.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604130152334_Prueba.Designer.cs">
-      <DependentUpon>201604130152334_Prueba.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201604130224212_Prueba2.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604130224212_Prueba2.Designer.cs">
-      <DependentUpon>201604130224212_Prueba2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201604130245320_Prueba3.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604130245320_Prueba3.Designer.cs">
-      <DependentUpon>201604130245320_Prueba3.cs</DependentUpon>
+    <Compile Include="DataContexts\EquiposMigrations\201604132320475_CreateInicial.cs" />
+    <Compile Include="DataContexts\EquiposMigrations\201604132320475_CreateInicial.Designer.cs">
+      <DependentUpon>201604132320475_CreateInicial.cs</DependentUpon>
     </Compile>
     <Compile Include="DataContexts\EquiposMigrations\Configuration.cs" />
     <Compile Include="DataContexts\IdentityDb.cs" />
-    <Compile Include="DataContexts\IdentityMigrations\201604091559282_Inicial.cs" />
-    <Compile Include="DataContexts\IdentityMigrations\201604091559282_Inicial.Designer.cs">
-      <DependentUpon>201604091559282_Inicial.cs</DependentUpon>
+    <Compile Include="DataContexts\IdentityMigrations\201604132245003_CreateInicial.cs" />
+    <Compile Include="DataContexts\IdentityMigrations\201604132245003_CreateInicial.Designer.cs">
+      <DependentUpon>201604132245003_CreateInicial.cs</DependentUpon>
     </Compile>
     <Compile Include="DataContexts\IdentityMigrations\Configuration.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
@@ -482,11 +457,6 @@
     <Content Include="Views\EquiposClimatizacion\Edit.cshtml" />
     <Content Include="Views\EquiposClimatizacion\Index.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\InformacionComercial.cshtml" />
-    <Content Include="Views\InformacionesComerciales\Create.cshtml" />
-    <Content Include="Views\InformacionesComerciales\Delete.cshtml" />
-    <Content Include="Views\InformacionesComerciales\Details.cshtml" />
-    <Content Include="Views\InformacionesComerciales\Edit.cshtml" />
-    <Content Include="Views\InformacionesComerciales\Index.cshtml" />
     <Content Include="Views\Shared\_InformacionComercial.cshtml" />
     <Content Include="Views\MantenimientosEquipo\Create.cshtml" />
     <Content Include="Views\MantenimientosEquipo\Delete.cshtml" />
@@ -500,11 +470,11 @@
     <Content Include="Views\SolicitudesUsuarios\CreatePassword.cshtml" />
     <Content Include="Views\SolicitudesUsuarios\CreatePasswordConfirmation.cshtml" />
     <Content Include="Views\SolicitudesUsuarios\_SolicitudesCount.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Create.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Delete.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Details.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Edit.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Index.cshtml" />
+    <Content Include="Views\InformacionesComerciales\Create.cshtml" />
+    <Content Include="Views\InformacionesComerciales\Delete.cshtml" />
+    <Content Include="Views\InformacionesComerciales\Details.cshtml" />
+    <Content Include="Views\InformacionesComerciales\Edit.cshtml" />
+    <Content Include="Views\InformacionesComerciales\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -525,29 +495,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604091600278_Inicial.resx">
-      <DependentUpon>201604091600278_Inicial.cs</DependentUpon>
+    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604132320475_CreateInicial.resx">
+      <DependentUpon>201604132320475_CreateInicial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604102228312_Update.resx">
-      <DependentUpon>201604102228312_Update.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604102233565_Update2.resx">
-      <DependentUpon>201604102233565_Update2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604130144279_AddOrdenDeTrabajo.resx">
-      <DependentUpon>201604130144279_AddOrdenDeTrabajo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604130152334_Prueba.resx">
-      <DependentUpon>201604130152334_Prueba.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604130224212_Prueba2.resx">
-      <DependentUpon>201604130224212_Prueba2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604130245320_Prueba3.resx">
-      <DependentUpon>201604130245320_Prueba3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\IdentityMigrations\201604091559282_Inicial.resx">
-      <DependentUpon>201604091559282_Inicial.cs</DependentUpon>
+    <EmbeddedResource Include="DataContexts\IdentityMigrations\201604132245003_CreateInicial.resx">
+      <DependentUpon>201604132245003_CreateInicial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
