--- a/EquiposTecnicosSN.Web/EquiposTecnicosSN.Web.csproj
+++ b/EquiposTecnicosSN.Web/EquiposTecnicosSN.Web.csproj
@@ -253,6 +253,10 @@
     <Compile Include="DataContexts\EquiposMigrations\201604282346308_Update3.Designer.cs">
       <DependentUpon>201604282346308_Update3.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataContexts\EquiposMigrations\201605030006431_Update1.cs" />
+    <Compile Include="DataContexts\EquiposMigrations\201605030006431_Update1.Designer.cs">
+      <DependentUpon>201605030006431_Update1.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataContexts\EquiposMigrations\Configuration.cs" />
     <Compile Include="DataContexts\IdentityDb.cs" />
     <Compile Include="DataContexts\IdentityMigrations\201604272326154_CreateInicial.cs" />
@@ -1312,6 +1316,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\EquiposMigrations\201604282346308_Update3.resx">
       <DependentUpon>201604282346308_Update3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataContexts\EquiposMigrations\201605030006431_Update1.resx">
+      <DependentUpon>201605030006431_Update1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\IdentityMigrations\201604272326154_CreateInicial.resx">
       <DependentUpon>201604272326154_CreateInicial.cs</DependentUpon>
