--- a/EquiposTecnicosSN.Web/Web.config
+++ b/EquiposTecnicosSN.Web/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EquiposTecnicosSN.Web-20160330123610.mdf;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20160330123610;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--
+      <add name="EquiposTecnicosDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EquiposTecnicosSN.Web-20160330123610.mdf;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20160330123610;Integrated Security=True" providerName="System.Data.SqlClient" />
+    -->
+      <add name="EquiposTecnicosDbContext" connectionString="Data Source=GAME-PC\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=EquiposTecnicosSN" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
