Modelo de traslados

--- a/EquiposTecnicosSN.Web/EquiposTecnicosSN.Web.csproj
+++ b/EquiposTecnicosSN.Web/EquiposTecnicosSN.Web.csproj
@@ -234,36 +234,13 @@
     <Compile Include="Controllers\OrdenesDeTrabajoController.cs" />
     <Compile Include="Controllers\ProveedoresController.cs" />
     <Compile Include="Controllers\SolicitudesUsuariosController.cs" />
+    <Compile Include="Controllers\TrasladosController.cs" />
     <Compile Include="Controllers\UbicacionesController.cs" />
     <Compile Include="CustomExtensions\EnumExtension.cs" />
     <Compile Include="DataContexts\EquiposDb.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604272335020_CreateInicial.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604272335020_CreateInicial.Designer.cs">
-      <DependentUpon>201604272335020_CreateInicial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201604281852451_Update.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604281852451_Update.Designer.cs">
-      <DependentUpon>201604281852451_Update.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201604282249387_Update2.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604282249387_Update2.Designer.cs">
-      <DependentUpon>201604282249387_Update2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201604282346308_Update3.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201604282346308_Update3.Designer.cs">
-      <DependentUpon>201604282346308_Update3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201605030006431_Update1.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201605030006431_Update1.Designer.cs">
-      <DependentUpon>201605030006431_Update1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201605030028229_Update21.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201605030028229_Update21.Designer.cs">
-      <DependentUpon>201605030028229_Update21.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataContexts\EquiposMigrations\201605030105299_Update22.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201605030105299_Update22.Designer.cs">
-      <DependentUpon>201605030105299_Update22.cs</DependentUpon>
+    <Compile Include="DataContexts\EquiposMigrations\201605040209178_CreateInicial.cs" />
+    <Compile Include="DataContexts\EquiposMigrations\201605040209178_CreateInicial.Designer.cs">
+      <DependentUpon>201605040209178_CreateInicial.cs</DependentUpon>
     </Compile>
     <Compile Include="DataContexts\EquiposMigrations\Configuration.cs" />
     <Compile Include="DataContexts\IdentityDb.cs" />
@@ -1110,6 +1087,7 @@
     <Content Include="lib\bower_components\raphael\bower.json" />
     <None Include="Scripts\jquery-2.2.2.intellisense.js" />
     <Content Include="Scripts\date-picker-ready.js" />
+    <Content Include="Scripts\ddl-traslado.js" />
     <Content Include="Scripts\ddls-info-hardware.js" />
     <Content Include="Scripts\jquery-2.2.2.js" />
     <Content Include="Scripts\jquery-2.2.2.min.js" />
@@ -1294,6 +1272,11 @@
     <Content Include="Views\Shared\EditorTemplates\OrdenDeTrabajo.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\InformacionHardware.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Mantenimiento.cshtml" />
+    <Content Include="Views\Traslados\Create.cshtml" />
+    <Content Include="Views\Traslados\Delete.cshtml" />
+    <Content Include="Views\Traslados\Details.cshtml" />
+    <Content Include="Views\Traslados\Edit.cshtml" />
+    <Content Include="Views\Traslados\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1313,26 +1296,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604272335020_CreateInicial.resx">
-      <DependentUpon>201604272335020_CreateInicial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604281852451_Update.resx">
-      <DependentUpon>201604281852451_Update.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604282249387_Update2.resx">
-      <DependentUpon>201604282249387_Update2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201604282346308_Update3.resx">
-      <DependentUpon>201604282346308_Update3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201605030006431_Update1.resx">
-      <DependentUpon>201605030006431_Update1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201605030028229_Update21.resx">
-      <DependentUpon>201605030028229_Update21.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201605030105299_Update22.resx">
-      <DependentUpon>201605030105299_Update22.cs</DependentUpon>
+    <EmbeddedResource Include="DataContexts\EquiposMigrations\201605040209178_CreateInicial.resx">
+      <DependentUpon>201605040209178_CreateInicial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\IdentityMigrations\201604272326154_CreateInicial.resx">
       <DependentUpon>201604272326154_CreateInicial.cs</DependentUpon>
