--- a/EquiposTecnicosSN.Web/Web.config
+++ b/EquiposTecnicosSN.Web/Web.config
@@ -10,9 +10,9 @@
   <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
     <!--
-      <add name="EquiposTecnicosDbContext" connectionString="Data Source=GAME-PC\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=EquiposTecnicosSN" providerName="System.Data.SqlClient"/>
-    -->
       <add name="EquiposTecnicosDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EquiposTecnicosSN.Web-20160330123610.mdf;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20160330123610;Integrated Security=True" providerName="System.Data.SqlClient" />
+    -->
+      <add name="EquiposTecnicosDbContext" connectionString="Data Source=GAME-PC\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=EquiposTecnicosSN" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -40,7 +40,7 @@
     <validation validateIntegratedModeConfiguration="false" />
   <handlers>
             <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
-        </handlers></system.webServer>
+        <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
