Creacion y Diagnosito de una Orden. Modelo de repuestos

--- a/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
+++ b/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
@@ -49,14 +49,17 @@
     <Compile Include="Equipos\Info\InformacionComercial.cs" />
     <Compile Include="Equipos\Info\InformacionHardware.cs" />
     <Compile Include="Equipos\Info\Umdns.cs" />
+    <Compile Include="Mantenimiento\Repuesto.cs" />
+    <Compile Include="Mantenimiento\SolicitudRepuesto.cs" />
     <Compile Include="Mantenimiento\GastoOrdenDeTrabajo.cs" />
-    <Compile Include="Mantenimiento\Mantenimiento.cs" />
     <Compile Include="Mantenimiento\MantenimientoTipo.cs" />
-    <Compile Include="Mantenimiento\MantenimientoEstado.cs" />
+    <Compile Include="Mantenimiento\OrdenDeTrabajoEstado.cs" />
     <Compile Include="Mantenimiento\OrdenDeTrabajo.cs" />
     <Compile Include="Equipos\Info\Fabricante.cs" />
     <Compile Include="Equipos\Info\Marca.cs" />
     <Compile Include="Equipos\Info\Modelo.cs" />
+    <Compile Include="Mantenimiento\PrioridadOrdenDeTrabajo.cs" />
+    <Compile Include="Mantenimiento\StockRepuesto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mantenimiento\Proveedor.cs" />
     <Compile Include="Usuarios\SolicitudUsuario.cs" />
