--- a/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
+++ b/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Equipos\Info\InformacionComercial.cs" />
     <Compile Include="Equipos\Info\InformacionHardware.cs" />
     <Compile Include="Equipos\Info\Umdns.cs" />
+    <Compile Include="Mantenimiento\OrdenDeTrabajoPrioridad.cs" />
     <Compile Include="Mantenimiento\Repuesto.cs" />
     <Compile Include="Mantenimiento\SolicitudRepuesto.cs" />
     <Compile Include="Mantenimiento\GastoOrdenDeTrabajo.cs" />
@@ -58,7 +59,6 @@
     <Compile Include="Equipos\Info\Fabricante.cs" />
     <Compile Include="Equipos\Info\Marca.cs" />
     <Compile Include="Equipos\Info\Modelo.cs" />
-    <Compile Include="Mantenimiento\PrioridadOrdenDeTrabajo.cs" />
     <Compile Include="Mantenimiento\StockRepuesto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mantenimiento\Proveedor.cs" />
